# adopt_agentic_retrieval

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  Makefile  indemnification_claims_data.csv  main.py  pyproject.toml  seed.py
backend/api/: routes.py  schemas.py
backend/config/: __init__.py  settings.py
backend/data/: __init__.py  claims_db.py
backend/graph/: __init__.py  chat.py  query.py  state.py  tools.py
backend/graph/nodes/: __init__.py  answer.py  chat.py  execute.py  router.py  sql.py
backend/services/: __init__.py  sql.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo
frontend/src/: App.css  App.tsx
frontend/src/api/: chat.ts
frontend/src/components/: ChatArea.tsx  DataTable.tsx  DatabaseStructure.tsx  MessageInput.tsx  MessageList.tsx  ModelSelector.tsx  Sidebar.tsx
frontend/src/config/: env.ts  models.ts
frontend/src/hooks/: useSendMessage.ts
frontend/src/stores/: chatStore.ts
