[project]
name = "agentic-chat-backend"
version = "0.1.0"
description = "FastAPI + LangGraph chat API with OpenRouter"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "langgraph>=0.2.0",
    "langchain-openai>=0.3.0",
    "langchain-core>=0.3.0",
    "pydantic-settings>=2.0.0",
    "pandas>=3.0.1",
    "duckdb>=1.0.0",
]

[tool.uv]
dev-dependencies = []

[tool.uv.sources]

[tool.pyright]
venvPath = "."
venv = ".venv"
